# Camp

./: .boring  .gitignore  Makefile  README.txt  readme.markdown
_darcs/: hashed_inventory  tentative_pristine
_darcs/inventories/: 0000040287-f6e4926fc64ec0db38226fb075b2e881e672b9586da517f7b6afc55a08cf400f
_darcs/patches/: 0000000111-2fa529a65b35ed20d6c6ad10599550cf2346d3acf5b3ac1b494848eafecfba98  0000000112-80e0339628cb1e9cfbe534804955faac4d616ac2ec4c107d58ab794cfdd386f1  0000000115-c98e829fe85f4c891d36e5aa9c6f67410931f753d2ce0bc19010b6c4abd14265  0000000116-d815bef24e08c92cd906cd04b254c258dee7746611ca4488e08cadd6315bb6da  0000000118-cf871c192f73c04aeeade8db8e52eb9d2068ed68299f31651cc01c090035bc18  0000000130-23b42b70366bfe01139a3d2859a1d5dd8c14607a68af584bb21c963931ec5072  0000000141-9e7e2d1d8e13c5cf79c26c24ca207b38b6eea332eb53d8dc3567dcdfbe267ab9  0000000143-5610ad34c5d6bfed1ed5017ec23d35787dc30e047b79798b111d1ebe08c720e9  0000000144-e75f7018953227e736efaa83cca1591225cea309aad9f97b5ade171be050b715  0000000146-dcc45853f1907e79ab4e22f92ceecd1b35b2536187be89ef3269efcf4a46637d  0000000154-d8792af2fd27e58f33f6d639de3bcbe602a440659ea518de73a59b0fec28c95a  0000000156-197ebeade7d70a164f9ea727694d17160b8156990ea2cf57c1cebb4f2b1e834f  0000000157-4851ff2c968da22b9e0e5c64e30ab0e69156bee3709d59699aab955f04b358ac  0000000158-69f3e8caab16889b9fa2e542eac1a34d535a071394d11da532146daee32aba9b  0000000162-06a6adb2e3e3b3d3770afdd7594cf8970edb6f8f26e9402110a8207851c8da1e  0000000175-edc68c0e4af76358b08d197ad526ec337e7efb76972d6b578ccc3ed74a74b936  0000000180-3d43be395bfa82618cb7b47e6a6026397c6f31dd177f142175dcd73efdded8b0  0000000182-29d6f4731a036c4feb9d7cf67daa0b8c2a133f09ef66f871b50f6ff89cd28013  0000000182-7dbfa31be575a94e5d8bc592e7d72822b91e325ac8c5c4946fe3ae75398d38f8  0000000182-910000d59a61ab51c63caf0fa919a70dfa171efbd364ba0f631d65ae5ba086e5  0000000186-beb28850188fd7a50ac181aabd1f5e63c99c78bf6e3a3bef0b7dac9e4d1e860e  0000000193-10de3798344bb56748f615978ffdc5ebdd86413efc9efe170200882bd861bd11  0000000199-808a0e2453e1bd2b54afc4456a0935d949fe39708d1c2e7325984440b6a5538e  0000000200-dc27acb6462fe91bbc45b86bc2e7119eb19d21027bcff8565c007fc43e4cd5ff  0000000208-06179894e277a2889805cbba6103f2201a86386d6dd5b679bce94d92db66bb49  0000000218-311307278fb1c5bad8f8a749cc0cf902683f30bb22bd88392bf6f92a1604cda2  0000000220-f4fb6a19642fac0b24824deb139a4086a832e3b467750531a9abfd86f09c52e6  0000000239-ed43118cab689ed2f41c9aab268a7415636179415fd7702e87598e86e9c59141  0000000240-515210f715df913ff4c0e78430b79e9ebc50c7ac4d94fa832e812054f5e5b55f  0000000249-919fac28b6cc86f5dd709ea7e1f6e37655dd4f2be5e20b343e4f9e7685fcd24e  0000000253-7dbdd4c0994dc186cea01d3379187e6cedcd49890176fde232344f6aa34c2852  0000000253-e57d0f891d219c20bed7e1efae98eedea9db5ec13c1bc591d11f20064c579df8  0000000255-8fcf4688cc3d80d676e7d387a14fbb3ee6b2f2ac615d3a9f0d9e0b0152c85a3b  0000000259-8fff2f32e2cee420530e6a760a70545e72b404ac9da27d48afdbf038f34d4963  0000000261-8747b67d9934aca23a79e93d8f98c89d43ea93490e21eca7e519c9181aed3a5b  0000000262-48521c292a54a1270011d7e9bc6c616b2808e8f6c6c87981d9c64bf11d286c1d  0000000262-df2130c2e6c980a94ade3fd6b25f1dd8d12c225d99a7082a6dd75a62f29d4144  0000000265-6f30f143865a40cba8af6ae1c832ba1e7e7167b24cd8321baf98d4032caca590  0000000267-15087af4ffb1f6c9f0a9da3374b56d5a8bcc220eb1ffa817af0c783da6e41368  0000000269-b7433779bcfa395bad0881d99c20b094bbbe3b80821c2aa4f54ab01b0b82ef68  (+200 more)
_darcs/prefs/: defaultrepo
_darcs/pristine.hashed/: 0000000058-c9debd4e5ab83ffb83788a008ca065764b7fc5279af02f4f140aae4c76119622  0000000065-7ea232cb6da930d62c4beb0a67eeb3a52dd9365d8510231608cc50923401ede4  0000000074-0ed14de0992ad96195489ce61ada2a9f667f3b89dc46aa3e5dfeb1ddb5f8903a  0000000087-7474b7e1d4f5110990216c6a4eee09cb8da9ba35d9b174ba7dc8d7713a2e91fe  0000000089-a8b99c8645b4e3bc5b1951260c65d27cc4007d00339c5e4065e25d5adcee0c95  0000000089-f2ca4b8240d7ca4c973e4187397ca8f0f88b6ca67ef757c7c94423ac2c4aad5b  0000000091-b1e1f13c505d66f90222a489f26ae87dd50e0b4d9702e9ab7a88a9a02b98f34c  0000000092-9d067dc34edbf4c315793e31fa11c2d1d1ffc0d889ac3f1895a8127f24e5d16b  0000000092-ac4058172efe6f333ae31ce9612728492d308f296a8b3727d496b8ff07c60d56  0000000094-03c14ff5969b71af629d60de6472bcd79fafe8bea6431fa4e13c172a723207b3  0000000094-1c87ed52ff247dd4d027b3af852b69b3da67118e10068ea5039cc479df4f7d0f  0000000094-34570c064fdaf7924c2b65dbfbef0c8eae5be3638fa47e6ecfab6e971d7c6093  0000000094-864693a4bc693d99470db9e805a10dab1b8f702a2a08d17734c36f21fc0a3a13  0000000094-92a6d3cdb87b2f53122daa9e736ea351ce9971eb19d48a2cb894579a0eb4880c  0000000094-97ff20b0a4f7ace5731ec8ee8ece9118111629ae5125ca4b0be141990629fe32  0000000094-984e513f2542b2b4d1ab77394a0e9b096984c8641f42845a2355cf4864e688a0  0000000094-9f770bc5e4a64295c8edb1ef57cd9d2ffc343417d878cbb5d9093b673868a371  0000000094-c534f01e0ffcbb215c80f5e525d1bf6f2b6d6d716a990a202757a44a729b10e5  0000000094-cfba4eb2c7e87ffa242e69ac3458b87f712a511a146e5c5c3819a399c12a9e0f  0000000094-dd78248e8dd106f44b94fad94b99757aab43ad9f9c63a224a03f22518f21d1c6  0000000094-eb27302a8f97bcfda93fe03c7932fc91c9b3c492527b0b6d5b01f865a682f7ca  (+170 more)
camp-bin/: camp.cabal
camp-bin/Camp/: Die.hs  Main.hs
camp-bin/Camp/Command/: Add.hs  Get.hs  Init.hs  Interactive.hs  Inventory.hs  Pull.hs  Record.hs  Show.hs
camp-core/: camp-core.cabal
camp-core/Camp/: Content.hs  InRepoFileName.hs  Types.hs  Utils.hs
camp-core/Camp/Patch/: Anonymous.hs  Apply.hs  Catch.hs  Commute.hs  ContextedPatch.hs  Equality.hs  InputOutput.hs  Invert.hs  MegaPatch.hs  Merge.hs  Name.hs  Patch.hs  Pretty.hs  Primitive.hs  RevSequence.hs  Sequence.hs  Stream.hs
camp-fragment/: Fragment.hs  LICENSE  camp-fragment.cabal
camp-network/: camp-network.cabal
camp-network/Camp/: Curl.hsc  Network.hs
camp-network/cbits/: curl.c
camp-repository/: LICENSE  camp-repository.cabal
camp-repository/Camp/: Diff.hs  Inventory.hs  Logging.hs  Messages.hs  Options.hs  Record.hs  Repository.hs
camp-view/: LICENSE  camp-view.cabal
camp-view/Camp/: View.hs
camp-view/Camp/View/: Deps.hs  Types.hs
camp-view/Camp/View/Draw/: PIL.hs  Text.hs
tests/: run_tests.sh
(+8 files in other folders)
